{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 911,
  "lineage": "24d0fcc0-03e9-e9be-9b45-4aa587388ace",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0773ef51300650a3c",
            "arn": "arn:aws:ec2:us-east-1:001239102331:elastic-ip/eipalloc-0773ef51300650a3c",
            "domain": "vpc",
            "id": "eipalloc-0773ef51300650a3c",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-32-194-227-123.compute-1.amazonaws.com",
            "public_ip": "32.194.227.123",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags_all": {
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:internet-gateway/igw-098768fac8dd06ee3",
            "id": "igw-098768fac8dd06ee3",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-ecs-igw"
            },
            "tags_all": {
              "Name": "iot-ecs-igw",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb-iot",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:loadbalancer/app/alb-iot/6098c2bf8c54da36",
            "arn_suffix": "app/alb-iot/6098c2bf8c54da36",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-iot-1024585334.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001239102331:loadbalancer/app/alb-iot/6098c2bf8c54da36",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-iot",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0f26a141a20a69a77"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01f80b6796c8339e0"
              },
              {
                "subnet_id": "subnet-0da14ebe5dfacb65f"
              }
            ],
            "subnets": [
              "subnet-01f80b6796c8339e0",
              "subnet-0da14ebe5dfacb65f"
            ],
            "tags": {
              "Name": "alb-iot"
            },
            "tags_all": {
              "Name": "alb-iot",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb-iot-sg",
            "aws_subnet.subred-publica-A",
            "aws_subnet.subred-publica-B",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-iot-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:listener/app/alb-iot/6098c2bf8c54da36/cec888c0f8e9cb40",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/grafana-tg/5db77427e0ead7e3",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001239102331:listener/app/alb-iot/6098c2bf8c54da36/cec888c0f8e9cb40",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:loadbalancer/app/alb-iot/6098c2bf8c54da36",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-iot",
            "aws_lb_target_group.grafana-tg",
            "aws_security_group.alb-iot-sg",
            "aws_subnet.subred-publica-A",
            "aws_subnet.subred-publica-B",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "alb-iot-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/webserver-iot-tg/614158a7a96675cf",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:listener-rule/app/alb-iot/6098c2bf8c54da36/cec888c0f8e9cb40/a02424df28a77ffa",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "regex_values": [],
                    "values": [
                      "/data"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001239102331:listener-rule/app/alb-iot/6098c2bf8c54da36/cec888c0f8e9cb40/a02424df28a77ffa",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:listener/app/alb-iot/6098c2bf8c54da36/cec888c0f8e9cb40",
            "priority": 100,
            "region": "us-east-1",
            "tags": null,
            "tags_all": {
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "transform": []
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb-iot",
            "aws_lb_listener.alb-iot-http",
            "aws_lb_target_group.grafana-tg",
            "aws_lb_target_group.webserver-iot-tg",
            "aws_security_group.alb-iot-sg",
            "aws_subnet.subred-publica-A",
            "aws_subnet.subred-publica-B",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "grafana-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/grafana-tg/5db77427e0ead7e3",
            "arn_suffix": "targetgroup/grafana-tg/5db77427e0ead7e3",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/grafana-tg/5db77427e0ead7e3",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "grafana-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "grafana-tg"
            },
            "tags_all": {
              "Name": "grafana-tg",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "webserver-iot-tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/webserver-iot-tg/614158a7a96675cf",
            "arn_suffix": "targetgroup/webserver-iot-tg/614158a7a96675cf",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:001239102331:targetgroup/webserver-iot-tg/614158a7a96675cf",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "webserver-iot-tg",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "target-group-iot"
            },
            "tags_all": {
              "Name": "target-group-iot",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0773ef51300650a3c",
            "association_id": "eipassoc-094d997884f090274",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-0a6f6f589067001d0",
            "network_interface_id": "eni-0742924a1279ff206",
            "private_ip": "10.0.1.10",
            "public_ip": "32.194.227.123",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0da14ebe5dfacb65f",
            "tags": {
              "Name": "ngw"
            },
            "tags_all": {
              "Name": "ngw",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_subnet.subred-publica-A",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-private-ngw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:route-table/rtb-0358ec8db5f980b2e",
            "id": "rtb-0358ec8db5f980b2e",
            "owner_id": "001239102331",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0a6f6f589067001d0",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-private-ngw"
            },
            "tags_all": {
              "Name": "rt-private-ngw",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_nat_gateway.ngw",
            "aws_subnet.subred-publica-A",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rt-public-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:route-table/rtb-0d29ad4fe30c24cbf",
            "id": "rtb-0d29ad4fe30c24cbf",
            "owner_id": "001239102331",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-098768fac8dd06ee3",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rt-public-igw"
            },
            "tags_all": {
              "Name": "rt-public-igw",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-igw-a-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-027a37c7948ce2be7",
            "region": "us-east-1",
            "route_table_id": "rtb-0d29ad4fe30c24cbf",
            "subnet_id": "subnet-0da14ebe5dfacb65f"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-public-igw",
            "aws_subnet.subred-publica-A",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-igw-b-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e52cec80efa07eb2",
            "region": "us-east-1",
            "route_table_id": "rtb-0d29ad4fe30c24cbf",
            "subnet_id": "subnet-01f80b6796c8339e0"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.rt-public-igw",
            "aws_subnet.subred-publica-B",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-ngw-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0092ac7bf400ef9e1",
            "region": "us-east-1",
            "route_table_id": "rtb-0358ec8db5f980b2e",
            "subnet_id": "subnet-06456c0102d47e107"
          },
          "dependencies": [
            "aws_eip.eip-nat",
            "aws_nat_gateway.ngw",
            "aws_route_table.rt-private-ngw",
            "aws_subnet.subred-privada-A",
            "aws_subnet.subred-publica-A",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb-iot-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:security-group/sg-0f26a141a20a69a77",
            "description": "Security Group para el Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f26a141a20a69a77",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-iot-sg",
            "name_prefix": "",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-iot-sg"
            },
            "tags_all": {
              "Name": "alb-iot-sg",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "db-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:security-group/sg-0b115a58ea71362ef",
            "description": "Security Group para acceso a la base de datos",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b115a58ea71362ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-04beed4cc888bea75"
                ],
                "self": false,
                "to_port": 8181
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8181,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-05325ad55ebd650bf"
                ],
                "self": false,
                "to_port": 8181
              }
            ],
            "name": "db-sg",
            "name_prefix": "",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "db-sg"
            },
            "tags_all": {
              "Name": "db-sg",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-iot-sg",
            "aws_security_group.grafana-sg",
            "aws_security_group.webserver-iot-sg",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "grafana-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:security-group/sg-04beed4cc888bea75",
            "description": "Security Group para acceso al dashboard",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04beed4cc888bea75",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0f26a141a20a69a77"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "grafana-sg",
            "name_prefix": "",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "grafana-sg"
            },
            "tags_all": {
              "Name": "grafana-sg",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb-iot-sg",
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-iot-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:security-group/sg-05325ad55ebd650bf",
            "description": "Security Group para acceso al webserver IoT",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05325ad55ebd650bf",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              }
            ],
            "name": "webserver-iot-sg",
            "name_prefix": "",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:subnet/subnet-06456c0102d47e107",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06456c0102d47e107",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "001239102331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subred-privada-A"
            },
            "tags_all": {
              "Name": "subred-privada-A",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica-A",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:subnet/subnet-0da14ebe5dfacb65f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0da14ebe5dfacb65f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001239102331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-a"
            },
            "tags_all": {
              "Name": "subnet-public-a",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica-B",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:subnet/subnet-01f80b6796c8339e0",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01f80b6796c8339e0",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "001239102331",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "subnet-public-b"
            },
            "tags_all": {
              "Name": "subnet-public-b",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            },
            "vpc_id": "vpc-0ac83481935ba9ff7"
          },
          "dependencies": [
            "aws_vpc.iot-ecs-red"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "iot-ecs-red",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:001239102331:vpc/vpc-0ac83481935ba9ff7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-049ca981c19c490ab",
            "default_route_table_id": "rtb-0fe2821b3e4a21082",
            "default_security_group_id": "sg-078560f96f91fc455",
            "dhcp_options_id": "dopt-00e1fddfcfd9acfe5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac83481935ba9ff7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0fe2821b3e4a21082",
            "owner_id": "001239102331",
            "region": "us-east-1",
            "tags": {
              "Name": "iot-ecs-red"
            },
            "tags_all": {
              "Name": "iot-ecs-red",
              "Project": "IoT-ECS",
              "environment": "dev",
              "managed": "terraform"
            }
          }
        }
      ]
    }
  ]
}